# CubrixMetrix

./: CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Cube.cpp  Cube.h  FlyCamera.cpp  FlyCamera.h  README.md  Shader.cpp  Shader.h  camera.h  glad.c  main.cpp
dep/: SimplexNoise.cpp  SimplexNoise.h
includes/glad/: glad.h
shaders/: model.frag  shader.frag  shader.vert
